libqt6c/src/libqjsonobject.hpp

typedef QJsonObject::const_iterator QJsonObject__const_iterator;
typedef QJsonObject::iterator QJsonObject__iterator;
typedef struct QJsonObject QJsonObject;
typedef struct QJsonObject__const_iterator QJsonObject__const_iterator;
typedef struct QJsonObject__iterator QJsonObject__iterator;
typedef struct QJsonValue QJsonValue;
typedef struct QJsonValueRef QJsonValueRef;
QJsonObject* QJsonObject_new();
QJsonObject* QJsonObject_new2(const QJsonObject* other);
void QJsonObject_OperatorAssign(QJsonObject* self, const QJsonObject* other);
void QJsonObject_Swap(QJsonObject* self, QJsonObject* other);
QJsonObject* QJsonObject_FromVariantMap(const QVariantMap* mapVal);
QVariantMap QJsonObject_ToVariantMap(const QJsonObject* self);
QJsonObject* QJsonObject_FromVariantHash(const QVariantHash* mapVal);
QVariantHash QJsonObject_ToVariantHash(const QJsonObject* self);
QStringList QJsonObject_Keys(const QJsonObject* self);
ptrdiff_t QJsonObject_Size(const QJsonObject* self);
ptrdiff_t QJsonObject_Count(const QJsonObject* self);
ptrdiff_t QJsonObject_Length(const QJsonObject* self);
bool QJsonObject_IsEmpty(const QJsonObject* self);
QJsonValue* QJsonObject_Value(const QJsonObject* self, const libqt_string key);
QJsonValue* QJsonObject_OperatorSubscript(const QJsonObject* self, const libqt_string key);
QJsonValueRef* QJsonObject_OperatorSubscript2(QJsonObject* self, const libqt_string key);
void QJsonObject_Remove(QJsonObject* self, const libqt_string key);
QJsonValue* QJsonObject_Take(QJsonObject* self, const libqt_string key);
bool QJsonObject_Contains(const QJsonObject* self, const libqt_string key);
bool QJsonObject_OperatorEqual(const QJsonObject* self, const QJsonObject* other);
bool QJsonObject_OperatorNotEqual(const QJsonObject* self, const QJsonObject* other);
QJsonObject__iterator* QJsonObject_Begin(QJsonObject* self);
QJsonObject__const_iterator* QJsonObject_Begin2(const QJsonObject* self);
QJsonObject__const_iterator* QJsonObject_ConstBegin(const QJsonObject* self);
QJsonObject__iterator* QJsonObject_End(QJsonObject* self);
QJsonObject__const_iterator* QJsonObject_End2(const QJsonObject* self);
QJsonObject__const_iterator* QJsonObject_ConstEnd(const QJsonObject* self);
QJsonObject__iterator* QJsonObject_Erase(QJsonObject* self, QJsonObject__iterator* it);
QJsonObject__iterator* QJsonObject_Find(QJsonObject* self, const libqt_string key);
QJsonObject__const_iterator* QJsonObject_Find2(const QJsonObject* self, const libqt_string key);
QJsonObject__const_iterator* QJsonObject_ConstFind(const QJsonObject* self, const libqt_string key);
QJsonObject__iterator* QJsonObject_Insert(QJsonObject* self, const libqt_string key, const QJsonValue* value);
bool QJsonObject_Empty(const QJsonObject* self);
void QJsonObject_Delete(QJsonObject* self);