QtBeef/src/Qt/qjsonobject.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QJsonObject
// --------------------------------------------------------------
[CRepr]
struct QJsonObject_Ptr: void
{
}
extension CQt
{
	[LinkName("QJsonObject_new")]
	public static extern QJsonObject_Ptr* QJsonObject_new();
	[LinkName("QJsonObject_new2")]
	public static extern QJsonObject_Ptr* QJsonObject_new2(QJsonObject_Ptr* other);
	[LinkName("QJsonObject_Delete")]
	public static extern void QJsonObject_Delete(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_OperatorAssign")]
	public static extern void QJsonObject_OperatorAssign(QJsonObject_Ptr* self, QJsonObject_Ptr* other);
	[LinkName("QJsonObject_Swap")]
	public static extern void QJsonObject_Swap(QJsonObject_Ptr* self, QJsonObject_Ptr* other);
	[LinkName("QJsonObject_FromVariantMap")]
	public static extern QJsonObject_Ptr* QJsonObject_FromVariantMap(void** mapVal);
	[LinkName("QJsonObject_ToVariantMap")]
	public static extern void* QJsonObject_ToVariantMap(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_FromVariantHash")]
	public static extern QJsonObject_Ptr* QJsonObject_FromVariantHash(void** mapVal);
	[LinkName("QJsonObject_ToVariantHash")]
	public static extern void* QJsonObject_ToVariantHash(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_Keys")]
	public static extern void* QJsonObject_Keys(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_Size")]
	public static extern void* QJsonObject_Size(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_Count")]
	public static extern void* QJsonObject_Count(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_Length")]
	public static extern void* QJsonObject_Length(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_IsEmpty")]
	public static extern bool QJsonObject_IsEmpty(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_Value")]
	public static extern QJsonValue_Ptr* QJsonObject_Value(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_OperatorSubscript")]
	public static extern QJsonValue_Ptr* QJsonObject_OperatorSubscript(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_OperatorSubscript2")]
	public static extern QJsonValueRef_Ptr* QJsonObject_OperatorSubscript2(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_Remove")]
	public static extern void QJsonObject_Remove(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_Take")]
	public static extern QJsonValue_Ptr* QJsonObject_Take(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_Contains")]
	public static extern bool QJsonObject_Contains(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_OperatorEqual")]
	public static extern bool QJsonObject_OperatorEqual(QJsonObject_Ptr* self, QJsonObject_Ptr* other);
	[LinkName("QJsonObject_OperatorNotEqual")]
	public static extern bool QJsonObject_OperatorNotEqual(QJsonObject_Ptr* self, QJsonObject_Ptr* other);
	[LinkName("QJsonObject_Begin")]
	public static extern QJsonObject_iterator_Ptr* QJsonObject_Begin(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_Begin2")]
	public static extern QJsonObject_const_iterator_Ptr* QJsonObject_Begin2(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_ConstBegin")]
	public static extern QJsonObject_const_iterator_Ptr* QJsonObject_ConstBegin(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_End")]
	public static extern QJsonObject_iterator_Ptr* QJsonObject_End(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_End2")]
	public static extern QJsonObject_const_iterator_Ptr* QJsonObject_End2(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_ConstEnd")]
	public static extern QJsonObject_const_iterator_Ptr* QJsonObject_ConstEnd(QJsonObject_Ptr* self);
	[LinkName("QJsonObject_Erase")]
	public static extern QJsonObject_iterator_Ptr* QJsonObject_Erase(QJsonObject_Ptr* self, QJsonObject_iterator_Ptr* it);
	[LinkName("QJsonObject_Find")]
	public static extern QJsonObject_iterator_Ptr* QJsonObject_Find(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_Find2")]
	public static extern QJsonObject_const_iterator_Ptr* QJsonObject_Find2(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_ConstFind")]
	public static extern QJsonObject_const_iterator_Ptr* QJsonObject_ConstFind(QJsonObject_Ptr* self, libqt_string key);
	[LinkName("QJsonObject_Insert")]
	public static extern QJsonObject_iterator_Ptr* QJsonObject_Insert(QJsonObject_Ptr* self, libqt_string key, QJsonValue_Ptr* value);
	[LinkName("QJsonObject_Empty")]
	public static extern bool QJsonObject_Empty(QJsonObject_Ptr* self);
}
class QJsonObject : IQJsonObject
{
	private QJsonObject_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this()
	{
		this.ptr = CQt.QJsonObject_new();
	}
	public this(IQJsonObject other)
	{
		this.ptr = CQt.QJsonObject_new2((.)other?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QJsonObject_Delete(this.ptr);
	}
	public void Swap(IQJsonObject other)
	{
		CQt.QJsonObject_Swap((.)this.ptr, (.)other?.ObjectPtr);
	}
	public QJsonObject_Ptr* FromVariantMap(void** mapVal)
	{
		return CQt.QJsonObject_FromVariantMap(mapVal);
	}
	public void* ToVariantMap()
	{
		return CQt.QJsonObject_ToVariantMap((.)this.ptr);
	}
	public QJsonObject_Ptr* FromVariantHash(void** mapVal)
	{
		return CQt.QJsonObject_FromVariantHash(mapVal);
	}
	public void* ToVariantHash()
	{
		return CQt.QJsonObject_ToVariantHash((.)this.ptr);
	}
	public void* Keys()
	{
		return CQt.QJsonObject_Keys((.)this.ptr);
	}
	public void* Size()
	{
		return CQt.QJsonObject_Size((.)this.ptr);
	}
	public void* Count()
	{
		return CQt.QJsonObject_Count((.)this.ptr);
	}
	public void* Length()
	{
		return CQt.QJsonObject_Length((.)this.ptr);
	}
	public bool IsEmpty()
	{
		return CQt.QJsonObject_IsEmpty((.)this.ptr);
	}
	public QJsonValue_Ptr* Value(String key)
	{
		return CQt.QJsonObject_Value((.)this.ptr, libqt_string(key));
	}
	public QJsonValueRef_Ptr* OperatorSubscript2(String key)
	{
		return CQt.QJsonObject_OperatorSubscript2((.)this.ptr, libqt_string(key));
	}
	public void Remove(String key)
	{
		CQt.QJsonObject_Remove((.)this.ptr, libqt_string(key));
	}
	public QJsonValue_Ptr* Take(String key)
	{
		return CQt.QJsonObject_Take((.)this.ptr, libqt_string(key));
	}
	public bool Contains(String key)
	{
		return CQt.QJsonObject_Contains((.)this.ptr, libqt_string(key));
	}
	public QJsonObject_iterator_Ptr* Begin()
	{
		return CQt.QJsonObject_Begin((.)this.ptr);
	}
	public QJsonObject_const_iterator_Ptr* Begin2()
	{
		return CQt.QJsonObject_Begin2((.)this.ptr);
	}
	public QJsonObject_const_iterator_Ptr* ConstBegin()
	{
		return CQt.QJsonObject_ConstBegin((.)this.ptr);
	}
	public QJsonObject_iterator_Ptr* End()
	{
		return CQt.QJsonObject_End((.)this.ptr);
	}
	public QJsonObject_const_iterator_Ptr* End2()
	{
		return CQt.QJsonObject_End2((.)this.ptr);
	}
	public QJsonObject_const_iterator_Ptr* ConstEnd()
	{
		return CQt.QJsonObject_ConstEnd((.)this.ptr);
	}
	public QJsonObject_iterator_Ptr* Erase(IQJsonObject_iterator it)
	{
		return CQt.QJsonObject_Erase((.)this.ptr, (.)it?.ObjectPtr);
	}
	public QJsonObject_iterator_Ptr* Find(String key)
	{
		return CQt.QJsonObject_Find((.)this.ptr, libqt_string(key));
	}
	public QJsonObject_const_iterator_Ptr* Find2(String key)
	{
		return CQt.QJsonObject_Find2((.)this.ptr, libqt_string(key));
	}
	public QJsonObject_const_iterator_Ptr* ConstFind(String key)
	{
		return CQt.QJsonObject_ConstFind((.)this.ptr, libqt_string(key));
	}
	public QJsonObject_iterator_Ptr* Insert(String key, IQJsonValue value)
	{
		return CQt.QJsonObject_Insert((.)this.ptr, libqt_string(key), (.)value?.ObjectPtr);
	}
	public bool Empty()
	{
		return CQt.QJsonObject_Empty((.)this.ptr);
	}
}
interface IQJsonObject : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QJsonObject::iterator
// --------------------------------------------------------------
[CRepr]
struct QJsonObject_iterator_Ptr: void
{
}
